# agentflow

./: .gitignore  main.py  pyproject.toml
.github/skills/agentflow-handover-guide/: SKILL.md
.github/skills/agentflow-langgraph-scaffold/: SKILL.md
app/: main.py  worker.py
app/api/router/: adaptive_rag_router.py  image_hazard_router.py  pdf_router.py  pdf_structured_router.py  rag_router.py  vegetation_analysis_router.py
app/api/schemas/: __init__.py  pdf_schemas.py  rag_schemas.py
app/application/: task_dispatcher.py
app/application/core/: graph_bootstrap.py  model_factory.py
app/application/infra/clients/: chroma_client.py  paddle_client.py  sam3_client.py
app/application/pipelines/: adaptive_rag_pipeline.py  image_hazard_pipeline.py  pdf_pipeline.py  pdf_structured_pipeline.py  rag_pipeline.py
app/application/workflows/adaptive_rag/: graph.py  state.py
app/application/workflows/pdf_structured/: graph.py  nodes.py
app/core/: errors.py  graph_bootstrap.py  settings.py
app/domain/workflows/adaptive_rag/: graph.py  state.py
app/domain/workflows/pdf_structured/: graph.py  nodes.py
app/infra/clients/: chroma_client.py  sam3_client.py
app/workflows/adaptive_rag/: graph.py  nodes.py  state.py
app/workflows/adaptive_rag/nodes/: __init__.py  agent.py  agent_rag.py  common.py  direct.py  direct_answer_node.py  fixed.py  insufficient.py  llm_call.py  route.py  route_decision_node.py  routing.py  tools.py
app/workflows/image_hazard/: graph.py  nodes.py  state.py
app/workflows/pdf_structured/: nodes.py
scripts/: rag_ingest.py
(+18 files in other folders)
