[project]
name = "agentflow"
version = "0.1.0"
description = "LangGraph-based AI workflow backend (adaptive RAG, PDF structured extraction) with arq/Redis task queue"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # --- Web framework ---
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",   # required by FastAPI File/Form uploads
    "python-dotenv>=1.0",

    # --- Task queue ---
    "arq>=0.26",

    # --- LangChain / LangGraph core ---
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-text-splitters>=0.3",
    "langgraph>=0.2",
    "langgraph-checkpoint-redis>=0.0.5",

    # --- Model providers / vector store ---
    "langchain-ollama>=0.2",
    "langchain-chroma>=0.1",

    # --- Data validation ---
    "pydantic>=2.7",

    # --- PDF handling ---
    "pypdf>=4.0",

    # --- HTTP client (paddle / sam3 services) ---
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
